select random items but they are not being added properly to the cart